--- a/ansible/roles/tier4_hdr_camera_driver/tasks/main.yaml
+++ b/ansible/roles/tier4_hdr_camera_driver/tasks/main.yaml
@@ -61,30 +61,29 @@
         state: present
       when: sdk_deb_download_url is defined
 
-- name: Modify extlinux.conf
-  hosts: all
+- name: Modify extlinux.conf - Add new boot entry
   become: yes
-  tasks:
-    - name: Step 1 - Add new boot entry for CSI TIERIV GMSL2 Camera Device Tree Overlay  C2x8
-      blockinfile:
-        path: /boot/extlinux/extlinux.conf
-        block: |
-          LABEL t4_primary_c2x8
-                MENU LABEL Custom Header Config: <CSI TIERIV GMSL2 Camera Device Tree Overlay: C2x8>
-                LINUX /boot/Image
-                INITRD /boot/initrd
-                FDT /boot/dtb/kernel_tegra234-orin-agx-cti-AGX201.dtb
-                OVERLAYS /boot/tier4-imx490-gmsl-device-tree-overlay-anvil-r36.dtbo
-                APPEND ${cbootargs} root=/dev/mmcblk0p1 rw rootwait rootfstype=ext4 mminit_loglevel=4 console=ttyTCU0,115200 console=ttyAMA0,115200 firmware_class.path=/etc/firmware fbcon=map:0 nospectre_bhb video=efifb:off console=tty0
-        state: present
-        backup: yes
+  ansible.builtin.blockinfile:
+    path: /boot/extlinux/extlinux.conf
+    block: |
+      LABEL t4_primary_c2x8
+            MENU LABEL Custom Header Config: <CSI TIERIV GMSL2 Camera Device Tree Overlay: C2x8>
+            LINUX /boot/Image
+            INITRD /boot/initrd
+            FDT /boot/dtb/kernel_tegra234-orin-agx-cti-AGX201.dtb
+            OVERLAYS /boot/tier4-imx490-gmsl-device-tree-overlay-anvil-r36.dtbo
+            APPEND ${cbootargs} root=/dev/mmcblk0p1 rw rootwait rootfstype=ext4 mminit_loglevel=4 console=ttyTCU0,115200 console=ttyAMA0,115200 firmware_class.path=/etc/firmware fbcon=map:0 nospectre_bhb video=efifb:off console=tty0
+    state: present
+    backup: yes
 
-    - name: Step 2 - Change DEFAULT primary to DEFAULT t4_primary_c2x8
-      replace:
-        path: /boot/extlinux/extlinux.conf
-        regexp: "^DEFAULT primary"
-        replace: "DEFAULT t4_primary_c2x8"
-        backup: no
+- name: Modify extlinux.conf - Change DEFAULT primary to DEFAULT t4_primary_c2x8
+  become: yes
+  ansible.builtin.replace:
+    path: /boot/extlinux/extlinux.conf
+    regexp: "^DEFAULT primary"
+    replace: "DEFAULT t4_primary_c2x8"
+    backup: no
+
 
 # - name: Setup C1 configuration
 #   block:
