--- a/ansible/roles/tier4_hdr_camera_driver/tasks/main.yaml
+++ b/ansible/roles/tier4_hdr_camera_driver/tasks/main.yaml
@@ -10,12 +10,12 @@
     driver_deb_name: "{{ item.name }}"
   when: item.name | regex_search('tier4-camera-gmsl_(.+)_arm64.deb')
 
-- name: Parse download URL for SDK
-  loop: "{{ github_api_return_info.json.assets }}"
-  ansible.builtin.set_fact:
-    sdk_deb_download_url: "{{ item.browser_download_url }}"
-    sdk_deb_name: "{{ item.name }}"
-  when: item.name | regex_search('t4cam_sdk-(.+)-rqx58g.deb')
+# - name: Parse download URL for SDK
+#   loop: "{{ github_api_return_info.json.assets }}"
+#   ansible.builtin.set_fact:
+#     sdk_deb_download_url: "{{ item.browser_download_url }}"
+#     sdk_deb_name: "{{ item.name }}"
+#   when: item.name | regex_search('t4cam_sdk-(.+)-rqx58g.deb')
 
 - name: Download driver deb file from public repo
   ansible.builtin.uri:
@@ -23,12 +23,12 @@
     dest: "{{ camera_driver_download_dir }}/{{ driver_deb_name }}"
     mode: 0644
 
-- name: Download SDK deb file from public repo
-  ansible.builtin.uri:
-    url: "{{ sdk_deb_download_url }}"
-    dest: "{{ camera_driver_download_dir }}/{{ sdk_deb_name }}"
-    mode: 0644
-  when: sdk_deb_download_url is defined
+# - name: Download SDK deb file from public repo
+#   ansible.builtin.uri:
+#     url: "{{ sdk_deb_download_url }}"
+#     dest: "{{ camera_driver_download_dir }}/{{ sdk_deb_name }}"
+#     mode: 0644
+#   when: sdk_deb_download_url is defined
 
 - name: Install apt packages
   become: true
@@ -46,20 +46,52 @@
   become: true
   block:
     - name: Install driver from deb file
+      ansible.builtin.shell:
+        cmd: DEBIAN_FRONTEND=noninteractive dpkg --force-confdef --force-confold -i "{{ camera_driver_download_dir }}/{{ driver_deb_name }}"
+      register: dpkg_result
+      failed_when: false
+
+    - name: Debug installation output
+      ansible.builtin.debug:
+        var: dpkg_result
+
+    - name: Fix potential dependency issues
       ansible.builtin.apt:
-        deb: "{{ camera_driver_download_dir }}/{{ driver_deb_name }}"
-        state: present
+        update_cache: yes
+
+    - name: Run apt --fix-broken install
+      ansible.builtin.shell:
+        cmd: apt-get -f -y install
+      when: dpkg_result.rc != 0
+
+    - name: Reinstall driver after fixing dependencies
+      ansible.builtin.shell:
+        cmd: DEBIAN_FRONTEND=noninteractive dpkg --force-confdef --force-confold -i "{{ camera_driver_download_dir }}/{{ driver_deb_name }}"
+      when: dpkg_result.rc != 0
+      register: reinstall_result
+      failed_when: reinstall_result.rc != 0
     # - name: Post process
     #   ansible.builtin.shell:
     #     cmd: |
     #       /opt/nvidia/jetson-io/config-by-hardware.py -n 2="TIERIV ISX021 GMSL2 Camera Device Tree Overlay"
     #     # noqa no-changed-when
     #     # TODO: check dtb file
-    - name: Install SDK from deb file
-      ansible.builtin.apt:
-        deb: "{{ camera_driver_download_dir }}/{{ sdk_deb_name }}"
-        state: present
-      when: sdk_deb_download_url is defined
+    # - name: Install SDK from deb file
+    #   ansible.builtin.apt:
+    #     deb: "{{ camera_driver_download_dir }}/{{ sdk_deb_name }}"
+    #     state: present
+    #   when: sdk_deb_download_url is defined
+
+- name: Check for device tree overlay file
+  become: true
+  ansible.builtin.stat:
+    path: /boot/tier4-imx490-gmsl-device-tree-overlay-anvil-r36.dtbo
+  register: dtbo_file
+
+- name: Warn if device tree overlay file is missing
+  ansible.builtin.debug:
+    msg: "Warning: Device tree overlay file is missing. Installation may fail."
+  when: not dtbo_file.stat.exists
 
 - name: Modify extlinux.conf - Add new boot entry
   become: yes
@@ -83,7 +115,6 @@
     regexp: "^DEFAULT primary"
     replace: "DEFAULT t4_primary_c2x8"
     backup: no
-
 
 # - name: Setup C1 configuration
 #   block:
@@ -147,3 +178,7 @@
     target_file: /etc/modprobe.d/tier4-imx490.conf
     config_prefix: options tier4_imx490
     block_name: IMX490 configuration
+
+- name: Notify about reboot requirement
+  ansible.builtin.debug:
+    msg: "Configuration complete. System needs to be rebooted for changes to take effect."
