--- a/ansible/roles/ros2/tasks/main.yaml
+++ b/ansible/roles/ros2/tasks/main.yaml
@@ -355,7 +355,7 @@
             chdir: "{{ ros_root_dir }}"
     - name: Colcon build
       ansible.builtin.command:
-        cmd: colcon build --merge-install --cmake-args -DCMAKE_BUILD_TYPE=Release -DCMAKE_POLICY_VERSION_MINIMUM=3.5
+        cmd: colcon build --merge-install --cmake-force-configure --cmake-args -DCMAKE_BUILD_TYPE=Release -DCMAKE_POLICY_VERSION_MINIMUM=3.5
         chdir: "{{ ros_root_dir }}"
       become: true
     - name: Remove build files
